bin=[{name="new_day", path="src/new_day.rs"}, {name="day1", path="src/day1/day1.rs"}, {name="day10", path="src/day10/day10.rs"}, {name="day11", path="src/day11/day11.rs"}, {name="day2", path="src/day2/day2.rs"}, {name="day3", path="src/day3/day3.rs"}, {name="day4", path="src/day4/day4.rs"}, {name="day5", path="src/day5/day5.rs"}, {name="day6", path="src/day6/day6.rs"}, {name="day7", path="src/day7/day7.rs"}, {name="day8", path="src/day8/day8.rs"}, {name="day9", path="src/day9/day9.rs"}, {name="day12", path="src/day12/day12.rs"}, ]

[package]
name = "Advent_Of_Code_2021"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"